<resources>
    <string name="app_name">SqliteTest</string>
    <string name="action_settings">Settings</string>

    <string name="txt_empty">data is empty</string>
    <string name="text_name">username</string>
    <string name="text_number">phone number</string>
    <string name="text_add">add</string>
    <string name="text_edit">edit</string>
    <string name="text_delete">delete</string>
</resources>
